# alfa-future

./: .dockerignore  .env.encrypt  .gitignore  Dockerfile.backend  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  start.sh  swagger.mjs
agent/: README.md  __init__.py  cli.py  config.py  requirements.txt
agent/core/: agent_logger.py  embeddings.py  graph.py  llm.py  model_downloader.py  model_manager.py  state.py
agent/data/context/: business_info.txt
agent/data/financial/: expenses_q4_2024.csv  sales_november_2024.xlsx
agent/data/legal/: contract_supplier.docx
agent/prompts/: planner.py  reflector.py  synthesizer.py
agent/tools/: document_loader.py  financial.py  legal_rag.py  marketing.py
app/: __main__.py
app/api/: accountain.py  finance.py  lawyer.py  main_page.py  marketing.py  organization.py  router.py
app/application/: calendar.py
app/domain/: dao.py  models.py  schemas.py
app/infra/: config.py  ioc.py
app/infra/api_wrappers/: http.py  organization_info_wrapper.py
app/infra/db/migrations/: env.py  kalendar2025.txt
app/infra/db/migrations/versions/: 003_create_calendar_from_pdf.py  a33ebf9b1982_create_mock_users.py
app/infra/db/repo/: exceptions.py
backend/: .ansible_pass  .gitignore  README.md  api.md  compose.yaml  pyproject.toml  ruff.toml
backend/app/api/: accountain.py  agent_chat.py  auth.py  finance.py  lawyer.py  main_page.py  marketing.py  router.py  schemas.py
backend/app/application/: auth.py  exceptions.py  organization.py  security.py
backend/app/domain/: mock_balanses.py  models.py
backend/app/infra/: agent_bridge.py  middleware.py
backend/app/infra/api_wrappers/: base.py
backend/app/infra/db/migrations/versions/: 004_add_chat_history.py  a6529d500843_init.py
backend/app/infra/db/repo/: __init__.py  chat_repository.py  exceptions.py  uow.py
backend/docker/app/: start.sh
docker/app/: Dockerfile  entrypoint.sh
web/: Dockerfile  README.md  package.json
web/src/: App.tsx  frontend.tsx  index.html  index.tsx
web/src/components/effects/: FluidBackground.tsx
web/src/components/layout/: Header.tsx  Shell.tsx
web/src/features/agent/: AgentChat.tsx
web/src/features/dashboard/: AgentReport.tsx  AnalyticsPanel.tsx  CalendarWidget.tsx  DailyReportWidget.tsx  Dashboard.tsx  DraggableWidget.tsx  FeatureCard.tsx  IssuesPanel.tsx  MonthlyReportWidget.tsx  RevenueWidget.tsx  TaxWidget.tsx  api.ts
web/src/features/settings/: Settings.tsx
web/src/lib/: agentWebSocket.ts  format.ts  i18n.ts  mirage.ts  queryClient.ts
web/src/store/: settings.ts  theme.ts  ui.ts
web/src/styles/: echarts-theme-light.ts  globals.css
web/src/types/: agent.ts  global.d.ts
Документация/: 2_Обоснование выбора LLM.docx
